.kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: pi-calculator
  labels:
    app.kubernetes.io/name: pi-calculator
    app.kubernetes.io/part-of: kubernetes-workshop
    app.kubernetes.io/kubernetes-component: deployment

spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: pi-calculator
      app.kubernetes.io/part-of: kubernetes-workshop
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pi-calculator
        app.kubernetes.io/part-of: kubernetes-workshop
        app.kubernetes.io/kubernetes-component: pod
    spec:
      securityContext:
        runAsUser: 65534
      containers:
        - name: nginx
          image: nginx:1.19-alpine
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: pi-calculator
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
              readOnly: true
        - name: php
          image: pi-calculator:php-fpm
          imagePullPolicy: Never # Force Kubernetes to use local docker image
      volumes:
        - name: pi-calculator
          configMap:
            name: pi-calculator
