.kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: pi-calculator
  labels:
    app.kubernetes.io/name: pi-calculator
    app.kubernetes.io/part-of: kubernetes-workshop

spec:
  rules:
    - host: pi-calculator.localhost
      http:
        paths:
          - backend:
              service:
                name: pi-calculator
                port:
                  name: http
            path: /
            pathType: Prefix
